--- a/views/Departments.ejs
+++ b/views/Departments.ejs
@@ -6,7 +6,7 @@
       <div class="dropdown d-flex align-items-center gap-2">
 
         <!-- Leave Form Button -->
-        <a href="/Modal_Page/department.html" class="btn btn-primary">
+        <a href="/department" class="btn btn-primary">
           Department Form
         </a>
 
@@ -21,7 +21,7 @@
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item" href="login.html">Logout</a></li>
+          <li><a class="dropdown-item" href="/Login">Logout</a></li>
         </ul>
 
       </div>
@@ -31,7 +31,7 @@
       <div class="card p-4">
         <div class="d-flex justify-content-between align-items-center mb-3">
           <h6>Department List</h6>
-          <button class="btn btn-add btn-sm"><i class="bi bi-plus"></i> Add Department</button>
+          <!-- <button class="btn btn-add btn-sm"><i class="bi bi-plus"></i> Add Department</button> -->
         </div>
         <table class="table table-departments mt-3">
           <thead>
@@ -104,7 +104,7 @@
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 
   <script>
     addEventListener("DOMContentLoaded", async (e) => {
