--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         <div class="container">
             <h1 class="display-4">Join Our Team at NextGen HR</h1>
             <p class="lead">Empowering people, powering business. Discover your next career move with us!</p>
-            <a href="#apply" class="btn btn-light btn-lg mt-3">Apply Now</a>
+            <a href="/Jobpost" class="btn btn-light btn-lg mt-3">Apply Now</a>
         </div>
     </section>
 
@@ -137,4 +137,5 @@
             </div>
         </div>
     </section>
+   
 <%- include('Partials/footer'); %>
