--- a/views/Approvals.ejs
+++ b/views/Approvals.ejs
@@ -12,7 +12,7 @@
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item" href="login.html">Logout</a></li>
+          <li><a class="dropdown-item" href="/Login">Logout</a></li>
         </ul>
       </div>
     </div>
