--- a/views/Attendance.ejs
+++ b/views/Attendance.ejs
@@ -9,7 +9,7 @@
       <div class="dropdown d-flex align-items-center gap-2">
 
         <!-- Leave Form Button -->
-        <a href="/Modal_Page/Attendance-form.html" class="btn btn-primary">
+        <a href="/Attendance-form" class="btn btn-primary">
           Attendance Form
         </a>
 
@@ -24,7 +24,7 @@
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item" href="login.html">Logout</a></li>
+          <li><a class="dropdown-item" href="/Login">Logout</a></li>
         </ul>
 
       </div>
@@ -126,7 +126,6 @@
   </div>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
     addEventListener("DOMContentLoaded", async (e) => {
