--- a/views/Dashboard.ejs
+++ b/views/Dashboard.ejs
@@ -42,7 +42,7 @@
 </style>
 
   <div class="main-content fade-in">
-    <div class="topbar rounded-4 mb-4 d-flex justify-content-between align-items-center shadow-sm px-3">
+     <div class="topbar rounded-4 mb-4 d-flex justify-content-between align-items-center shadow-sm px-3">
       <h5 id="dash">Dashboard</h5>
       <div class="dropdown">
         <button id="admin" class="btn btn-light rounded-3 dropdown-toggle" type="button" data-bs-toggle="dropdown">
@@ -54,7 +54,7 @@
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item" href="login.html">Logout</a></li>
+          <li><a class="dropdown-item" href="/Login">Logout</a></li>
         </ul>
       </div>
     </div>
@@ -120,8 +120,6 @@
     </div>
   </div>
 
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
 
     const obj = localStorage.getItem("UserObj", "first_name");
