--- a/views/Leave_Request.ejs
+++ b/views/Leave_Request.ejs
@@ -1,12 +1,13 @@
 <%- include('Layout-nav/header'); %>
-
+<style>
+</style>
 <div class="main-content">
     <div class="topbar rounded-4 mb-4 d-flex justify-content-between align-items-center shadow-sm px-3">
       <h5>Leave Requests</h5>
       <div class="dropdown d-flex align-items-center gap-2">
 
         <!-- Leave Form Button -->
-        <a href="/Modal_Page/Leave_request.html" class="btn btn-primary">
+        <a href="/leaverequest" class="btn btn-primary">
           Leave Form
         </a>
 
@@ -21,7 +22,7 @@
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item" href="login.html">Logout</a></li>
+          <li><a class="dropdown-item" href="/Login">Logout</a></li>
         </ul>
 
       </div>
@@ -75,8 +76,8 @@
                 <td>${e.reason}</td>
                 <td>${e.approved_by}</td>
                 <td id="statu">${e.status}</td>
-                <td><button class="btn btn-approve btn-sm aproveApplicationBtn" data-id="${e._id}">Approve</button></td>
-                <td><button class="btn btn-reject btn-sm rejectApplicationBtn" data-id="${e._id}">Reject</button></td>
+              <td><button class="btn btn-approve btn-sm bg-primary aproveApplicationBtn" data-id="${e._id}">Approve</button></td>
+                <td><button class="btn btn-reject btn-sm bg-danger rejectApplicationBtn" data-id="${e._id}">Reject</button></td>
            </tr>`
         });
         const aproveApplicationBtn = document.querySelectorAll(".aproveApplicationBtn");
@@ -187,4 +188,5 @@
     })
 
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <%- include('Layout-nav/footer'); %>
