--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -70,8 +68,8 @@
     <h4 class="login-title"><span class="text-dark">NextGen</span>HR Login</h4>
     <form>
       <div class="mb-3">
-        <label for="username" class="form-label">User Name</label>
-        <input type="email" class="form-control" name="email" id="username" required autofocus>
+        <label for="email" class="form-label">Enter Email</label>
+        <input type="email" class="form-control" name="email" id="email" required autofocus>
       </div>
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
@@ -91,35 +89,33 @@
         e.preventDefault();
         const loginobj =
         {
-          email: document.getElementById('username').value,
-          Password: document.getElementById('password').value,
+          email: document.getElementById('email').value,
+          password: document.getElementById('password').value,
         }
         // console.log(loginobj);
-
-        const response = await fetch(`http://localhost:3000/logindata`,
+        const response = await fetch("http://localhost:3000/logindata",
           {
             method: 'POST',
-            headers: {
-              'content-type': 'application/json',
-            },
+            headers: { 'content-type': 'application/json', },
             body: JSON.stringify(loginobj),
           });
-        console.log(response);
-
+        // console.log(response);
         const data = await response.json()
         console.log(data, "data");
-
         if (response.ok) {
           let eroor = document.getElementById("eroor");
-          let username = document.getElementById("username");
+          let email = document.getElementById("email");
           let password = document.getElementById("password");
-          if (username.value === data.email && password.value === data.password) {
+
+          if (email.value === data.email && password.value === data.password) {
+
             localStorage.setItem("UserObj", JSON.stringify(data));
+
             setTimeout(() => {
-              form.reset();
-              window.location.href = `dashboard.html`
+              form.reset(); window.location.href = "/Dashboard"
             }, 2000);
-            eroor.innerHTML = `<div class="alert alert-success">Login Sucssesfully</div>`;
+
+            eroor.innerHTML = `<div class="alert alert-success">Login Successful</div>`;
           }
           else {
             eroor.innerHTML = `<div class="alert alert-danger">User don't match</div>`;
@@ -128,12 +124,10 @@
         }
       }
       catch (error) {
-        console.error(`User Not Found`, error);
+        console.error("User Not Found", error);
       }
-
     });
   </script>
 </body>
 
 </html>
-
