--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -13,7 +13,7 @@
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item" href="login.html">Logout</a></li>
+          <li><a class="dropdown-item" href="/Login">Logout</a></li>
         </ul>
       </div>
     </div>
@@ -59,6 +59,5 @@
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <%- include('Layout-nav/footer'); %>
