--- a/views/Users.ejs
+++ b/views/Users.ejs
@@ -3,7 +3,12 @@
 <div class="main-content">
     <div class="topbar rounded-4 mb-4 d-flex justify-content-between align-items-center shadow-sm px-3">
       <h5>Users</h5>
+      
       <div class="dropdown">
+        <!-- Leave Form Button -->
+        <a href="/Register" class="btn btn-primary">
+          Add User
+        </a>
         <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
           <i class="bi bi-person-circle"></i> Admin
         </button>
@@ -13,7 +18,7 @@
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item" href="login.html">Logout</a></li>
+          <li><a class="dropdown-item" href="/Login">Logout</a></li>
         </ul>
       </div>
     </div>
@@ -21,7 +26,7 @@
       <div class="card p-4">
         <div class="d-flex justify-content-between align-items-center mb-3">
           <h6>User List</h6>
-          <a href="./Register.html"><button class="btn btn-add btn-sm"><i class="bi bi-plus"></i> Add User</button></a>
+          <!-- <a href="/Register"><button class="btn btn-add btn-sm "><i class="bi bi-plus"></i> Add User</button></a> -->
         </div>
         <table class="table table-users mt-3">
           <thead>
@@ -78,7 +83,6 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
 
     addEventListener("DOMContentLoaded", async (e) => {
