--- a/views/viewJobpostData.ejs
+++ b/views/viewJobpostData.ejs
@@ -14,7 +14,7 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="login.html">Logout</a></li>
+                            <li><a class="dropdown-item" href="/Login">Logout</a></li>
                         </ul>
                     </div>
                 </div>
@@ -76,7 +76,6 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
 
