--- a/views/Attendance.ejs
+++ b/views/Attendance.ejs
@@ -1,4 +1,4 @@
-<%- include('Layout-nav/header'); %>
+<%- include('Layout/header'); %>
 
 <!-- Main Content -->
   <div class="main-content">
@@ -279,4 +279,4 @@
     })
   </script>
 
-<%- include('Layout-nav/footer'); %>
+<%- include('Layout/footer'); %>
