--- a/views/Dashboard.ejs
+++ b/views/Dashboard.ejs
@@ -1,4 +1,4 @@
-<%- include('Layout-nav/header'); %>
+<%- include('Layout/header'); %>
 <style>
    /* Icon size */
     .stat-icon i {
@@ -136,4 +136,4 @@
   </script>
 
 
-<%- include('Layout-nav/footer'); %>
+<%- include('Layout/footer'); %>
