--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -1,4 +1,4 @@
-<%- include('Layout-nav/header'); %>
+<%- include('Layout/header'); %>
 
 <div class="main-content">
     <div class="topbar rounded-4 mb-4 d-flex justify-content-between align-items-center shadow-sm px-3">
@@ -60,4 +60,4 @@
     </div>
   </div>
 
-<%- include('Layout-nav/footer'); %>
+<%- include('Layout/footer'); %>
