--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -1,4 +1,4 @@
-<%- include('Layout-nav/header'); %>
+<%- include('Layout/header'); %>
 
 
   <div class="main-content">
@@ -350,4 +350,4 @@
 
   </html>
 
-  <%- include('Layout-nav/footer'); %>
+  <%- include('Layout/footer'); %>
