--- a/views/viewJobpostData.ejs
+++ b/views/viewJobpostData.ejs
@@ -1,4 +1,4 @@
-<%- include('Layout-nav/header'); %>
+<%- include('Layout/header'); %>
 <section>
         <div class="main-content">
             <div class="container py-4 flex-grow-1">
@@ -209,4 +209,4 @@
         });
     </script>
 
-<%- include('Layout-nav/footer'); %>
+<%- include('Layout/footer'); %>
