--- a/views/Approvals.ejs
+++ b/views/Approvals.ejs
@@ -1,4 +1,4 @@
-<%-include('Layout-nav/header');%>
+<%-include('Layout/header');%>
   <div class="main-content">
     <div class="topbar rounded-4 mb-4 d-flex justify-content-between align-items-center shadow-sm px-3">
       <h5>Approvals</h5>
@@ -65,4 +65,4 @@
       </div>
     </div>
   </div>
- <%-include('Layout-nav/footer');%>
+ <%-include('Layout/footer');%>
