--- a/views/Departments.ejs
+++ b/views/Departments.ejs
@@ -1,4 +1,4 @@
-<%- include('Layout-nav/header'); %>
+<%- include('Layout/header'); %>
 
 <div class="main-content">
     <div class="topbar rounded-4 mb-4 shadow-sm px-3">
@@ -240,4 +240,4 @@
       }
     })
   </script>
-<%- include('Layout-nav/footer'); %>
+<%- include('Layout/footer'); %>
