--- a/views/Leave_Request.ejs
+++ b/views/Leave_Request.ejs
@@ -1,4 +1,4 @@
-<%- include('Layout-nav/header'); %>
+<%- include('Layout/header'); %>
 <style>
 </style>
 <div class="main-content">
@@ -189,4 +189,4 @@
 
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<%- include('Layout-nav/footer'); %>
+<%- include('Layout/footer'); %>
