--- a/views/Reminders.ejs
+++ b/views/Reminders.ejs
@@ -1,4 +1,4 @@
-<%- include('Layout-nav/header'); %>
+<%- include('Layout/header'); %>
 <style>
   .reminder-list .list-group-item {
       display: flex;
@@ -75,4 +75,4 @@
   </div>
 
 
-<%- include('Layout-nav/footer'); %>
+<%- include('Layout/footer'); %>
