--- a/views/Attendance.ejs
+++ b/views/Attendance.ejs
@@ -138,21 +138,27 @@
         employees.forEach(emp => {
           empMap[emp._id] = emp.first_name + " " + emp.last_name;
         });
-        // console.log("empMap", empMap);
+        console.log("empMap", empMap);
         const attendanceTable = document.getElementById("attendanceTable");
         const res = await fetch("http://localhost:3000/getattendancedata")
         // console.log(res);
         const data = await res.json()
-        // console.log(data, "attendace data");
+        console.log("attendance data:", data);
         data.forEach((e, index) => {
+          console.log("current record:", e);
+          const displayDate = e.date ? new Date(e.date).toLocaleDateString() : '';
+          // Try to find employee ID - might be emp_id or employee_id
+          const empId = e.employee_id || e.emp_id;
+          const empName = empMap[empId] || 'Unknown';
+          console.log("Looking up empId:", empId, "Found name:", empName);
           attendanceTable.innerHTML += `
            <tr>
               <td>${index + 1}</td>
-              <td>${empMap[e.emp_id]}</td>
-              <td>${e.date}</td>
-              <td>${e.check_in}</td>
-              <td>${e.check_out}</td>
-              <td>${e.status}</td>
+              <td>${empName}</td>
+              <td>${displayDate}</td>
+              <td>${e.check_in || ''}</td>
+              <td>${e.check_out || ''}</td>
+              <td>${e.status || ''}</td>
               <td>                                                                                                                                      
                 <button class="text-center btn btn-primary btn-sm showApplicationBtn" data-bs-toggle="modal" data-bs-target="#updateAttendanceModal" id="edit" data-id="${e._id}"><i class="bi bi-pencil"></i></button>
                 <button class="text-center btn btn-danger btn-sm deltaeApplicationBtn" id="delete" data-id="${e._id}"><i class="bi bi-trash"></i></button>
@@ -187,13 +193,16 @@
             console.log(sindata);
 
             currentRecord = sindata
-            // console.log(sindata,"sindata");          
+            // console.log(sindata,"sindata");
             document.getElementById("editId").value = sindata._id
-            document.getElementById("editName").value = empMap[sindata.emp_id];
-            document.getElementById("edit_date").value = sindata.date
-            document.getElementById("edit_check_in").value = sindata.check_in
-            document.getElementById("edit_check_out").value = sindata.check_out
-            document.getElementById("edit_status").value = sindata.status
+            // Get employee name from empMap - empMap is keyed by _id from Register
+            const empName = empMap[sindata.employee_id] || 'Unknown Employee';
+            document.getElementById("editName").value = empName;
+            // set date input value in YYYY-MM-DD format for <input type="date">
+            document.getElementById("edit_date").value = sindata.date ? new Date(sindata.date).toISOString().split('T')[0] : '';
+            document.getElementById("edit_check_in").value = sindata.check_in || ''
+            document.getElementById("edit_check_out").value = sindata.check_out || ''
+            document.getElementById("edit_status").value = sindata.status || ''
           })
         });
         // updated api 
@@ -203,15 +212,15 @@
           e.preventDefault()
           const id = document.getElementById("editId").value
           const upobj = {
-            emp_id: currentRecord.emp_id,
+            employee_id: currentRecord.employee_id,
             date: document.getElementById("edit_date").value,
             check_in: document.getElementById("edit_check_in").value,
             check_out: document.getElementById("edit_check_out").value,
             status: document.getElementById("edit_status").value
           };
-          // console.log(upobj, "up");
+          console.log(upobj, "up");
 
-          const upfetch = await fetch("http://localhost:3000/updatedattandancedata", {
+          const upfetch = await fetch(`http://localhost:3000/updatedattandancedata/${id}`, {
             method: "PUT",
             headers: {
               "content-type": "application/json"
@@ -226,7 +235,7 @@
 
           if (upfetch.ok) {
             alert(`${updata.msg}`)
-            location.reload()
+            // location.reload()
           }
           else {
             alert("Data Can't Be Updated")
@@ -245,7 +254,7 @@
             }
             //  console.log(delobj);
 
-            const delfetch = await fetch("http://localhost:3000/deletedataattandance", {
+            const delfetch = await fetch(`http://localhost:3000/deletedataattandance/${delbtn}`, {
               method: "DELETE",
               headers: {
                 "content-type": "application/json"
