--- a/views/Leave_Request.ejs
+++ b/views/Leave_Request.ejs
@@ -1,7 +1,7 @@
 <%- include('Layout/header'); %>
-<style>
-</style>
-<div class="main-content">
+  <style>
+  </style>
+  <div class="main-content">
     <div class="topbar rounded-4 mb-4 d-flex justify-content-between align-items-center shadow-sm px-3">
       <h5>Leave Requests</h5>
       <div class="dropdown d-flex align-items-center gap-2">
@@ -54,7 +54,7 @@
       </div>
     </div>
   </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
 
@@ -65,14 +65,18 @@
         const data = await response.json();
         data.forEach((e, index) => {
           // console.log(e);
+          const formatDate = (dateString) => {
+            const date = new Date(dateString);
+            return date.toLocaleDateString('en-IN', { year: 'numeric', month: '2-digit', day: '2-digit' }).split('/').reverse().join('-');
+          };
 
           leavereauest.innerHTML += `
               <tr>
                 <td>${index + 1}</td>
-                <td>${e.employee_id}</td>
-                <td>${e.leave_type_id}</td>
-                <td>${e.from_date}</td>
-                <td>${e.to_date}</td>
+                <td>${e.employee_id.first_name} ${e.employee_id.last_name}</td>
+                <td>${e.leave_type}</td>
+                <td>${formatDate(e.from_date)}</td>
+                <td>${formatDate(e.to_date)}</td>
                 <td>${e.reason}</td>
                 <td>${e.approved_by}</td>
                 <td id="statu">${e.status}</td>
@@ -114,7 +118,7 @@
             //  console.log(updateddata,"updated");
 
             //update API
-            const upfetch = await fetch("http://localhost:3000/updatedleaverequest", {
+            const upfetch = await fetch(`http://localhost:3000/updatedleaverequest/${updateddata.id}`, {
               method: "PUT",
               headers: {
                 "content-type": "application/json"
@@ -125,7 +129,7 @@
             const updata = await upfetch.json()
             // console.log(updata);
             if (upfetch.ok) {
-              alert(`${updata.msg}`)
+              alert(`${updata.message}`)
               // location.reload()
             }
             else {
@@ -144,19 +148,19 @@
             e.preventDefault()
             const rejbtn = rej.getAttribute("data-id");
             // console.log(rejbtn);
-            const confirmation = confirm("You Want to Delate User Leave Request ")
-            if (confirmation === true) {
-              alert(`Leave Request Delate Sucsessfully`);
-              //  window.location.reload()
-            }
-            else {
-              alert(`Leave Request Can't be Delate`);
-              return;
-            }
+            // const confirmation = confirm("You Want to Delate User Leave Request ")
+            // if (confirmation === true) {
+            //   alert(`Leave Request Delate Sucsessfully`);
+            //   //  window.location.reload()
+            // }
+            // else {
+            //   alert(`Leave Request Can't be Delate`);
+            //   return;
+            // }
             const rejobj = { id: rejbtn }
             // console.log(rejobj);
 
-            const rejfetch = await fetch("http://localhost:3000/delateleaverequest", {
+            const rejfetch = await fetch(`http://localhost:3000/delateleaverequest/${rejobj.id}`, {
               method: "DELETE",
               headers: {
                 "content-type": "application/json"
@@ -189,4 +193,4 @@
 
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<%- include('Layout/footer'); %>
+  <%- include('Layout/footer'); %>
