--- a/views/Users.ejs
+++ b/views/Users.ejs
@@ -1,9 +1,9 @@
 <%- include('Layout/header'); %>
 
-<div class="main-content">
+  <div class="main-content">
     <div class="topbar rounded-4 mb-4 d-flex justify-content-between align-items-center shadow-sm px-3">
       <h5>Users</h5>
-      
+
       <div class="dropdown">
         <!-- Leave Form Button -->
         <a href="/Register" class="btn btn-primary">
@@ -89,8 +89,6 @@
       try {
         const res = await fetch('http://localhost:3000/getregisterdata');
         const usersd = await res.json();
-        console.log(usersd);
-
         const tbody = document.getElementById('rolldata');
         usersd.forEach((user, index) => {
           tbody.innerHTML +=
@@ -133,7 +131,7 @@
             document.getElementById("editId").value = data._id;
             document.getElementById("editName").value = data.first_name;
             document.getElementById("editEmail").value = data.email;
-            document.getElementById("editPosition" ).value = data.role_id;
+            document.getElementById("editPosition").value = data.role_id;
             document.getElementById("status").value = data.status;
 
           })
@@ -143,7 +141,7 @@
         editApplicationForm.addEventListener("submit", async (e) => {
           e.preventDefault();
           const id = document.getElementById("editId").value
-          console.log(id,"upid");
+          // console.log(id, "upid");
           const updatedobj = {
             first_name: document.getElementById("editName").value,
             email: document.getElementById("editEmail").value,
@@ -214,4 +212,4 @@
       }
     })
   </script>
-<%- include('Layout/footer'); %>
+  <%- include('Layout/footer'); %>
